--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
     "require": {
         "symfony/http-foundation": "^4.2",
-        "symfony/routing": "^4.2"
+        "symfony/routing": "^4.2",
+        "symfony/http-kernel": "^4.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
