--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "symfony/http-foundation": "^4.2",
         "symfony/routing": "^4.2",
-        "symfony/http-kernel": "^4.2"
+        "symfony/http-kernel": "^4.2",
+        "symfony/event-dispatcher": "^4.2"
     },
     "autoload": {
         "psr-4": {
