--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "symfony/http-foundation": "^4.2",
         "symfony/routing": "^4.2",
         "symfony/http-kernel": "^4.2",
-        "symfony/event-dispatcher": "^4.2"
+        "symfony/event-dispatcher": "^4.2",
+        "symfony/dependency-injection": "^4.2"
     },
     "autoload": {
         "psr-4": {
